# EvoDevo

./: CHANGELOG.md  EvoDevo.cabal  README.md
app/: Main.hs
benchmark/: Main.hs
src/: EvoDevo.hs
test/: Spec.hs
