cabal-version:       2.4
name:                EvoDevo
version:             0.0.0.0
synopsis:            simple tissue growth sim
description:
    simple tissue growth sim.
    See [README.md](https://github.com/Nolrai/EvoDevo#EvoDevo) for more details.
homepage:            https://github.com/Nolrai/EvoDevo
bug-reports:         https://github.com/Nolrai/EvoDevo/issues
license:             MIT
license-file:        LICENSE
author:              Chris Upshaw (From Yukari)
maintainer:          Chris Upshaw (From Yukari) <chrisaupshaw@gmail.com>
copyright:           2022 Chris Upshaw (From Yukari)
category:            Application
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.7

source-repository head
  type:                git
  location:            https://github.com/Nolrai/EvoDevo.git

common common-options
  build-depends:       base ^>= 4.14.3.0
                     , Relude

  mixins:              base hiding (Prelude)
                     , Relude (Relude as Prelude)

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     EvoDevo

executable EvoDevo
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       EvoDevo
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite EvoDevo-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       EvoDevo
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark EvoDevo-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       EvoDevo
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
